# aoc2021rust

./: README.md
day1/src/: main.rs
day10/: Cargo.toml
day10/src/: main.rs
day11/: Cargo.toml
day11/benches/: day11.rs
day11/src/: main.rs
day12/: Cargo.toml
day12/src/: main.rs
day13/src/: main.rs
day14/: Cargo.toml
day14/src/: main.rs
day15/: Cargo.toml
day15/benches/: day15.rs
day15/src/: main.rs
day16/: Cargo.toml
day16/benches/: day16.rs
day16/src/: main.rs
day17/: Cargo.toml
day17/benches/: day17.rs
day17/src/: main.rs
day18/src/: main.rs
day19/: Cargo.toml
day19/src/: main.rs
day2/src/: main.rs
day20/: Cargo.toml
day20/src/: main.rs
day21/src/: main.rs
day22/src/: main.rs
day23/src/: main.rs
day25/src/: main.rs
day3/src/: main.rs
day4/: Cargo.toml
day4/benches/: day4_benchmark.rs
day4/src/: main.rs
day5/src/: main.rs
day6/src/: main.rs
day7/src/: main.rs
day8/: Cargo.toml
day8/benches/: day8.rs
day8/src/: main.rs
day9/: Cargo.toml
day9/benches/: day9.rs
day9/src/: main.rs
