[package]
name = "day10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "day10"
path = "src/main.rs"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "main"
path = "benches/day10.rs"
harness = false
