[package]
name = "day11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "day11"
path = "src/main.rs"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "main"
path = "benches/day11.rs"
harness = false
