[package]
name = "day15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[lib]
name = "day15"
path = "src/main.rs"

[[bench]]
name = "main"
path = "benches/day15.rs"
harness = false
