[package]
name = "day4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[lib]
name = "day4"
path = "src/main.rs"

[[bench]]
name = "main"
path = "benches/day4_benchmark.rs"
harness = false
