[package]
name = "day8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "day8"
path = "src/main.rs"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "main"
path = "benches/day8.rs"
harness = false
